todo apis swagger documentaion refined
